--- a/index.html
+++ b/index.html
@@ -2,78 +2,79 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>DIV ATTACK Socket.IO</title>
+		<title>Clash of Sculptures</title>
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/main.css">
 		<!--script src="/js/Player.js"></script-->
 		<script src="/js/socket.io-1.3.5.js"></script>
 		<script src="/js/jquery-1.11.3.min.js"></script>
 		<script src="/js/parse-1.5.0.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div id="login">
 			<!--Login y Register-->
-		    <section class="parse-login margen">
-		        <section class="section-login flotar-izquierda">
-		            <h2>Ingresar</h2>
-		            <form id="login-form">
-		                <div class="form-group">
-		                    <input type="text" id="login-username" name="login-username" placeholder="Usuario" required>
-		                </div>
-		                <div class="form-group">
-		                    <input type="password" id="login-password" name="login-password" placeholder="Contraseña" required>
-		                </div>
-		                <div class="form-group">
-		                    <button type="submit">Ingresar</button>
-		                </div>
-		            </form>
-		        </section>
-
-		        <section class="section-signup flotar-derecha">
-		            <h2>Registrarse</h2>
-		            <form id="signup-form">
-		                <div class="form-group">
-		                    <input type="text" id="signup-username" name="signup-username" placeholder="Usuario" required>
-		                </div>
-		                <div class="form-group">
-		                    <input type="email" id="signup-email" name="signup-email" placeholder="E-Mail" required>
-		                </div>
-		                <div class="form-group">
-		                    <input type="password" id="signup-password" name="signup-password" placeholder="Contraseña" required>
-		                </div>
-		                <div class="form-group">
-		                    <button type="submit">Registrarse</button>
-		                </div>
-		            </form>
-		        </section>
-		    </section>
+	    	<div class="container">
+	    		<h1 class="text-center">Clash of Sculptures</h1>
+	    				    <div class="row" id="user-form">
+	    				    	<section class="col-md-12">
+	    					    	<section class="col-md-6">
+	    					    		<div class="jumbotron">
+	    					    			<h2>INFO</h2>
+	    					    		</div>
+	    					    	</section>
+	    				    	    <section class="col-md-3">
+	    				    	        <h3>Ingresar</h3>
+	    				    	        <form id="login-form">
+	    				    	            <div class="form-group">
+	    				    	                <input class="form-control" type="text" id="login-username" name="login-username" placeholder="Usuario" required>
+	    				    	            </div>
+	    				    	            <div class="form-group">
+	    				    	                <input class="form-control" type="password" id="login-password" name="login-password" placeholder="Contraseña" required>
+	    				    	            </div>
+	    				    	            <div class="form-group">
+	    				    	                <button class="btn btn-primary" type="submit">Ingresar</button>
+	    				    	            </div>
+	    				    	        </form>
+	    				    	    </section>
+	    				    	
+	    				    	    <section class="col-md-3">
+	    				    	        <h3>Registrarse</h3>
+	    				    	        <form id="signup-form">
+	    				    	            <div class="form-group">
+	    				    	                <input class="form-control" type="text" id="signup-username" name="signup-username" placeholder="Usuario" required>
+	    				    	            </div>
+	    				    	            <div class="form-group">
+	    				    	                <input class="form-control" type="email" id="signup-email" name="signup-email" placeholder="E-Mail" required>
+	    				    	            </div>
+	    				    	            <div class="form-group">
+	    				    	                <input class="form-control" type="password" id="signup-password" name="signup-password" placeholder="Contraseña" required>
+	    				    	            </div>
+	    				    	            <div class="form-group">
+	    				    	                <button class="btn btn-primary" type="submit">Registrarse</button>
+	    				    	            </div>
+	    				    	        </form>
+	    				    	    </section>
+	    				    	</section>
+	    				    </div>
+	    	</div>
 		</div>
 		<div id="nickname">
 			<div class="form-group">
             	Bienvenido <span id="user-span"></span>
-            	<a class="boton" id="salir">Salir</a>
+            	
         	</div>
 			<div id="form">
-				<form id="login">
-					<h2 class="fachero">DIV ATTACK socket.io</h2>
-					<h3><i>INGRESAR NICKNAME</i></h3>
-					<p><input type="text" id="nickInput" autocomplete="off" required autofocus></p>
-					<p><button id="ingresar">Ingresar</button></p>
-					<p id="error">Usuario Existente</p>
-				</form>
-				<p><button onclick="window.location.href='/credits'" class="button">Creditos</button></p>
-				<div id="theme-menu">
-					<h3><i>ELEGÍ EL TEMA!</i></h3>
-					<select>
-						<option value="1">Ovnis Attack</option>
-						<option value="2">PC Chips Attack</option>
-						<option value="3">Tanques de Guerra</option> 
-						<option value="4">HTML Desquiciado</option>
-						<option value="5">Countries Attack</option>
-						<option value="6">Food War</option>
-						<option value="7">Casas y perros</option>
-						<option value="8">Paper and drawings attack</option>
-						<option value="9">Terminal/Matrix attack</option>
-					</select>
+				<h2 class="fachero">Clash of Sculpures</h2>
+				<div class="form-group">
+					<button class="btn btn-primary" id="ingresar">Ingresar</button>
+				</div>
+				<p id="error" hidden>Usuario Existente</p>
+				<div class="form-group">
+					<button class="btn btn-primary" onclick="window.location.href='/credits'" class="button">Creditos</button>
+				</div>
+				<div class="form-group">
+					<a class="btn btn-primary" id="salir">Salir</a>
 				</div>
 			</div>
 		</div>
@@ -99,7 +100,6 @@
 			</div>
 		</div>
 		<script src="/js/perro.js"></script>
-		<script src="/js/parsecode.js"></script>
 		<script src="/js/jquery.overlaps.js"></script>
 	</body>
 </html>
