--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             	
         	</div>
 			<div id="form">
-				<h2 class="fachero">Clash of Sculpures</h2>
+				<h2 class="fachero">Clash of Sculptures</h2>
 				<div class="form-group">
 					<button class="btn btn-primary" id="ingresar">Ingresar</button>
 				</div>
