casa perro commit

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	    				    	        </form>
 	    				    	    </section>
 	    				    	
-	    				    	    <section class="col-md-3">
+	    				    	    <!--section class="col-md-3">
 	    				    	        <h3>Registrarse</h3>
 	    				    	        <form id="signup-form">
 	    				    	            <div class="form-group">
@@ -61,7 +61,7 @@
 	    				    	                <button class="btn btn-primary" type="submit">Registrarse</button>
 	    				    	            </div>
 	    				    	        </form>
-	    				    	    </section>
+	    				    	    </section-->
 	    				    	</section>
 	    				    </div>
 	    	</div>
@@ -130,8 +130,9 @@
 							</div>
 						</div>
 					</div>
+					<br>
 					<div class="row">
-						<div class="form-group">
+						<div class="form-group text-center">
 							<p id="error" hidden>Usuario Existente</p>
 							<button id="jugarya" class="btn btn-primary">Jugar Ya</button>
 						</div>
